@@ -1,15 +1,22 @@
       real*8 function pre_atrad(number)
 c
-c $Id: pre_atrad.F,v 1.4 1998-07-09 20:20:57 d3j191 Exp $
+c $Id: pre_atrad.F,v 1.5 1998-09-11 20:47:34 d3j191 Exp $
 c
       implicit none
       integer number
 c
       real*8 radius(0:105)
 c
+c     For the following elements radii were set to zero:
+c
+c      11 Na (1.40)
+c      12 Mg (1.36)
+c      19 K  (2.03) 
+c      20 Ca (1.74)
+c
       data radius / 99999.99,
      + 0.35, 1.22, 1.23, 0.89, 0.88, 0.77, 0.70, 0.66, 0.58, 1.60,
-     + 0.00, 1.36, 1.25, 1.17, 1.10, 1.04, 0.99, 1.91, 2.03, 1.74,
+     + 0.00, 0.00, 1.25, 1.17, 1.10, 1.04, 0.99, 1.91, 0.00, 0.00,
      + 1.44, 1.32, 1.22, 1.19, 1.17,1.165, 1.16, 1.15, 1.17, 1.25,
      + 1.25, 1.22, 1.21, 1.17, 1.14, 1.98, 2.22, 1.92, 1.62, 1.45,
      + 1.34, 1.29, 1.27, 1.24, 1.25, 1.28, 1.34, 1.41, 1.50, 1.40,
